--- a/src/sprite.html
+++ b/src/sprite.html
@@ -85,6 +85,22 @@
       fill: initial;
       stroke: black;
     }
+    .icon-demo {
+      width: 1.12em;
+      height: 1em;
+      /*fill: #546475;*/
+      /*stroke: initial;*/
+      fill: initial;
+      stroke: black;
+    }
+    .icon-hint {
+      width: 1em;
+      height: 1em;
+      /*fill: #86919A;*/
+      /*stroke: initial;*/
+      fill: initial;
+      stroke: black;
+    }
     .icon-man {
       width: 0.37em;
       height: 1em;
@@ -144,6 +160,24 @@
       <div class="icon-container">
         <svg class="icon icon-chevron-down">
           <use xlink:href="/img/sprite.svg#icon-chevron-down"></use>
+        </svg>
+      </div>
+    </li>
+    
+    <li class="icon-box">
+      <input class="icon-class-name autoselect" type="text" value=".icon-demo" readonly>
+      <div class="icon-container">
+        <svg class="icon icon-demo">
+          <use xlink:href="/img/sprite.svg#icon-demo"></use>
+        </svg>
+      </div>
+    </li>
+    
+    <li class="icon-box">
+      <input class="icon-class-name autoselect" type="text" value=".icon-hint" readonly>
+      <div class="icon-container">
+        <svg class="icon icon-hint">
+          <use xlink:href="/img/sprite.svg#icon-hint"></use>
         </svg>
       </div>
     </li>
